Added auth interceptor and auth token