@@ -5,14 +5,15 @@ import java.util.Map;
 import java.util.HashMap;
 
 import com.shervilg.spinboard.exception.RequestValidationException;
+import com.shervilg.spinboard.exception.UnauthorizedException;
 import org.springframework.http.HttpStatus;
 
 public class ExceptionConstant {
   public static final Map<Class, Integer> EXCEPTION_TO_CODE_MAP = makeExceptionTypeToCodeMap();
   private static Map<Class, Integer> makeExceptionTypeToCodeMap() {
-    Map<Class, Integer> map = new HashMap<>();
-    map.put(RequestValidationException.class, 400);
-
-    return Collections.unmodifiableMap(map);
+    return Map.of(
+        RequestValidationException.class, 400,
+        UnauthorizedException.class, 401
+    );
   }
 }
